# Ghost

./: AUTHORS.md  CONTRIBUTING.md  Ghost  LICENSE  MANIFEST.in  README.md  TERMS_OF_SERVICE  TERMS_OF_SERVICE.md  ban  ewererer  ghost  ghost.py  install.py  install.sh  mylabel.py  pyproject.toml  requirements.txt  setup.py  uninstall.py  uninstall.sh  update.sh
.github/workflows/: ci.yml
asm/: btrans.s  keycode_memory0.s  keycode_memory1.s  keycode_memory2.s  loop.s  memory.s
banner/: banner.txt
core/: badges.py  dctl.sh  fsmanip.py  ghost.py  ghostcat.py  helper.py  keyboard.py  launch.sh  loader.py  server.py  server.sh  shell.py  transfer.py
core/apps/: install.sh  launch.sh  uninstall.sh
data/check/: check.sh  dcheck.sh  rcheck.sh
data/cmds/: boot_cmds.txt  boot_commands.txt  core_cmds.txt  core_commands.txt  management_cmds.txt  managing_cmds.txt  other_cmds.txt  other_commands.txt  settings_cmds.txt  settings_commands.txt  stealing_cmds.txt  stealing_commands.txt  substrate_commands.txt  trolling_cmds.txt  trolling_commands.txt
data/grabber/: grabber.sh
data/keyboard/: keyboard.sh
data/keycode/: keycode.sh  keynums.txt
data/payloads/: activity  apps  battery  bootl  debug  download  eatpass  inet  netstat  openlink  openurl  reboot  recovery  screen  shell  sush  sysinfo  upload  wifi
etc/: ghost  update.sh
etc/core/: transfer.py
ghost/: __init__.py  __main__.py  cli.py  ghost.py  main.py
ghost/core/: __init__.py  badges.py  console.py  device.py  fsmanip.py  ghost.py  helper.py  keyboard.py  loader.py  server.py  transfer.py
ghost/lib/: __init__.py  module.py
ghost/modules/: activity.py  battery.py  broadcast.py  click.py  download.py  history.py  keyboard.py  keycode.py  (+12 more)
install/: coloring.txt
modules/: activity.py  battery.py  click.py  download.py  eatpass.py  keyboard.py  keycode.py  netstat.py  openurl.py  reboot.py  screen.py  screenshot.py  shell.py  sysinfo.py  type.py  upload.py  view_contacts.py  wifi.py
substrate/: gsub.py
(+13 files in other folders)
