[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ghost"
version = "1.0.0"
description = "Ghost CLI tool"
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "adb-shell",
    "rich<13.0.0",
    "badges @ git+https://github.com/EntySec/Badges",
    "pex @ git+https://github.com/EntySec/Pex",
    "colorscript @ git+https://github.com/EntySec/ColorScript"
]

[project.scripts]
ghost = "ghost:cli"
